Fix webmail mainscreen div top align

--- a/ui/php/webmail/skins/larry/styles.css
+++ b/ui/php/webmail/skins/larry/styles.css
@@ -805,14 +805,14 @@ a.iconlink.upload {
 
 #mainscreen {
 	position: absolute;
-	top: 88px;
+	top: 45px;
 	left: 10px;
 	right: 10px;
 	bottom: 20px;
 }
 
 .minimal #mainscreen {
-	top: 40px;
+	top: 30px;
 }
 
 .minimal #mainscreen.offset {
